ios/web/web_state/ui/crw_web_controller.mm
@@ -1981,7 +1981,9 @@ const NSTimeInterval kSnapshotOverlayTransition = 0.5;
   // cancelled.
   _lastUserInteraction.reset();
   base::RecordAction(UserMetricsAction("Reload"));
-  if (_webView) {
+  if ([self shouldLoadURLInNativeView:self.currentNavItem->GetURL()]) {
+    [self.nativeController reload];
+  } else {
     web::NavigationItem* transientItem =
         self.navigationManagerImpl->GetTransientItem();
     if (transientItem) {
@@ -1999,8 +2001,6 @@ const NSTimeInterval kSnapshotOverlayTransition = 0.5;
       // TODO(eugenebut): revisit this for WKWebView.
       [self loadCurrentURL];
     }
-  } else {
-    [self.nativeController reload];
   }
 }
 
